--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,4 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Lexend:wght@100..900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Rubik:ital,wght@0,300..900;1,300..900&display=swap');
 *{
     margin: 0;
     padding: 0;
@@ -8,7 +9,7 @@
 html,body{
     width: 100%;
     height: 100%;
-    font-family: "Lexend", sans-serif;
+    font-family: "Rubik", sans-serif;                                            
 }
 
 #main{
@@ -39,7 +40,7 @@ html,body{
 
 
 .loader-blue{
-    background-color: #1546F4;
+    background-color: #000629;
     position: absolute;
     top: 100%;
     width: 100%;
@@ -108,6 +109,7 @@ nav .nav-links a{
     color: #000;
     text-decoration: none;
     display: inline-block;
+    font-family: "Lexend", sans-serif;
 }
 .hero-section .hero{
     z-index: 11;
@@ -119,7 +121,7 @@ nav .nav-links a{
 }
 .hero-section .hero h1{
     font-size: 15vw;
-    font-weight: 300;
+    font-weight: 200;
     text-transform: uppercase;
     color: #000;
     margin-bottom: 0;
@@ -128,6 +130,7 @@ nav .nav-links a{
     width: fit-content;
     margin: 0;
     padding-top: 30px;
+    font-family: "Lexend", sans-serif;
 }
 
 .hero-section .hero h1 .line .word .char:nth-child(){
@@ -140,14 +143,16 @@ nav .nav-links a{
 .hero-section .hero-desc{
     font-size: 20px;
     font-weight: 500;
-    color: #000;
+    color: #737373;
+    font-family: "Lexend", sans-serif;
 }
 .hero-section .hero-desc .char{
     transform: translateY(24px);
     transition: transform .3s;
+
 }
 .hero-section .hero-desc span{
-    color: #1546F4;
+    color: #000;
 }
 .hero-desc-box{
     position: absolute;
@@ -173,7 +178,6 @@ nav .nav-links a{
     align-items: center;
     transform: translate(-50% ,-50%);
     pointer-events: none;
-    /* background-color: #1546F4; */
     overflow: hidden;
     transition: .3s all ease-out;
 
@@ -202,10 +206,11 @@ nav .nav-links a{
 
 .works-section{
     min-height: 100vh;
-    display: flex;
+    /* display: flex;
     justify-content: center;
-    align-items: center;
+    align-items: center; */
     padding: 100px 5vw 0;
+    position: relative;
 
 }
 
@@ -250,7 +255,7 @@ nav .nav-links a{
     border-radius: 20px;
     padding: 40px 20px 30px;
     width: 100%;
-    height: fit-content;
+    height: 100%;
 }
 .grid-4{
     grid-column: 2;
@@ -258,17 +263,9 @@ nav .nav-links a{
     border-radius: 20px;
     padding: 40px 20px 30px;
     width: 100%;
-    height: fit-content;
+    height: 100%;
 
 }
-
-/* .grid-5{
-    grid-column: 3;
-    background-color: #F7F7F7;
-    border-radius: 20px;
-    padding: 40px 20px 30px;
-    width: 100%;
-} */
 
 .w-cards{
     display: grid;
@@ -310,121 +307,153 @@ nav .nav-links a{
 }
 
 
-/* skills section */
-
-.skills-section{
-    width: 100%;
-
-}
-.skills-section .box{
-    padding: 20px 5%;
-    background-color: #1546F4;
-    color: #fff;
-    display: flex;
-    align-items: center;
-    gap: 50px;
-    width: fit-content;
-    rotate: 355deg !important;
-}
-.skills-section .box1{
-    padding: 20px 5%;
-    background-color: #1546F4;
-    color: #fff;
-    display: flex;
-    align-items: center;
-    gap: 50px;
-    width: fit-content;
-    rotate: 3deg !important;
-    margin-top: 200px;
-}
-
-.skills-section p{
-    font-size: 40px;
-    letter-spacing: 5px;
-    font-weight: 400;
-
-
-}
-
 /* about section */
 
-.about-me-section{
-    margin-top: 100px;
-    padding-bottom: 90vh;
+.about-section{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 100px 5vw 0;
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
 }
-.about-me{
+.about-section .about-left{
     height: 100vh;
     display: flex;
-    justify-content: center;
-    align-items: center;
+    flex-direction: column;
+}
+.about-section .about-left h4{
+    font-size: 34px;
+    font-weight: 400;
+    margin-bottom: 15px;
+}
+.about-section .about-left p{
+    width: 70%;
+    font-weight: 400;
+    font-size: 16px;
+    color: #000;
+}
+.about-section .about-right .content-sections{
+    padding: 20px;
+}
+.about-section .about-right .content-sections .contents{
+    margin-bottom: 80px;
+}
+.about-section .about-right .content-sections h6{
+    font-size: 22px;
+    font-weight: 400;
+    margin-bottom: 15px;
+}
+.about-section .about-right .content-sections p{
+    font-size: 15px;
+    font-weight: 300;
+    color: #414141;
+    margin-bottom: 25px;
+}
+.about-section .about-right .content-sections .contents hr{
+    border-color: rgb(231 231 231 / 18%);
 }
 
-.about-me h2{
+
+
+/* contact section */
+.contact-section{
+    height: 100vh;
+    width: 100%;
+    background-color: #000;
+    padding: 100px 5vw;
+}
+.contact-section a{
+    text-decoration: none;
+}
+.contact-section h4{
+    font-size: 56px;
+    font-weight: 400;
+    color: #fff;
+    margin-bottom: 30px;
+    opacity: 1;
+}
+.contact-me-sec p{
+    color: #fff;
+    font-size: 18px;
+    font-weight: 300;
+    margin-bottom: 10px;
+}
+.contact-me-sec a{
+    display: block;
+    font-size: 14px;
+    color: #cfcfcf;
+    margin-bottom: 6px;
+    text-decoration: none;
+}
+
+.connect-me{
+    position: absolute;
+    left: 5vw;
+    bottom: 50px;
+}
+.connect-me img{
+    width: 30px;
+    margin-right: 30px;
+    cursor: pointer;
+}
+.footer-logo{
+    position: absolute;
+    right: 5vw;
+    bottom: 50px;
+    height: 40px;
+    clip-path: polygon(0 0, 100% 0, 100% 100%, 0 100%);
+    overflow: hidden;
+}
+.footer-logo h4{
+    font-family: "Lexend", sans-serif;
+    color: #fff;
+    font-size: 34px;
+    font-weight: 300;
+    transition: .5s ease-in-out;
+    cursor: pointer;
+}
+.footer-logo:hover h4{
+    margin-top: -40px;
+}
+
+
+
+/* about section 2 */
+.about-section-2{
+    padding: 100px 5vw;
+    min-height: 100vh;
+    width: 100%;
+    position: relative;
+    margin-bottom: 100px;
+}
+.about-section-bg{
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%,-50%);
+    background-color: #F7F7F7;
+    width: 70%;
+    height: 100%;
+    z-index: -1;
+    border-radius: 20px;
+}
+.about-section-2 h4{
+    max-width:80%;
+    font-size: 50px;
+    line-height: 58px;
+    font-weight: 400;
+    margin-bottom: 30px;
+}
+.count-section{
+    display: flex;
+    align-items: center;
+}
+.count-section .count h5{
     font-size: 15vw;
     font-weight: 300;
-    text-transform: uppercase;
-    color: #000;
-    z-index: 11;
+    margin-bottom: 0;
 }
-.about-details-div{
-    padding: 0 5vw;
-}
-
-.about-me-1{
-    display: flex;
-    justify-content: flex-start;
-    align-items: center;
-
-}
-.about-desc-box{
-    padding: 30px 20px;
-    width: 30%;
-    height: 75vh;
-    background-color: #1546F4;
-    color: #fff;
-    z-index: 13;
-}
-
-.about-me-2{
-    display: flex;
-    justify-content: flex-end;
-    align-items: center;
-
-}
-.about-me-2 .my-img{
-    padding: 30px 20px;
-    width: 30%;
-    height: 75vh;
-    z-index: 13;
-    overflow: hidden;
-}
-
-.about-me-2 .my-img img{
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
-}
-
-.about-me-3{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-
-}
-.about-me-3 .my-img{
-    padding: 30px 20px;
-    width: 30%;
-    height: 75vh;
-    z-index: 13;
-    overflow: hidden;
-}
-
-.about-me-2 .my-img img{
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
-}
-
-.page-4{
-    height: 200vh;
+.count-section .count:first-child{
+    margin-right: 10vw;
 }
