--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -591,5 +591,8 @@ nav .nav-links a{
     nav .nav-links a {
         margin-left: 20px;
     }
+    .click-here{
+        margin-bottom: 10%;
+    }
 }
 
