--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -21,7 +21,7 @@ html,body{
 .loader{
     position: fixed;
     width: 100%;
-    height: 100vh;
+    height: 100dvh;
     background-color: #ffffff;
     display: flex;
     justify-content: center;
@@ -591,8 +591,6 @@ nav .nav-links a{
     nav .nav-links a {
         margin-left: 20px;
     }
-    .click-here{
-        margin-bottom: 10%;
-    }
+
 }
 
