--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -11,7 +11,9 @@ html,body{
     height: 100%;
     font-family: "Rubik", sans-serif;                                            
 }
-
+a{
+    text-decoration: none;
+}
 #main{
     width: 100%;
 }
