--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -120,6 +120,9 @@ nav .nav-links a{
     left: 50%;
     transform: translate(-50%,-50%);
     overflow: hidden;
+    -webkit-user-select: none; /* Safari */
+    -ms-user-select: none; /* IE 10 and IE 11 */
+    user-select: none; /* Standard syntax */
 }
 .hero-section .hero h1{
     font-size: 15vw;
